--- a/public/adopciones.css
+++ b/public/adopciones.css
@@ -12,6 +12,11 @@
     border-radius: 25px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+  .ex1 {
+      margin-left: 3%;
+    overflow: auto;
+  }
 .imagen_perfil{
     margin-left: 25px;
     width: 300px;
