--- a/public/bootstrap.css
+++ b/public/bootstrap.css
@@ -149,6 +149,15 @@
     border-radius: 150px;
     border: 4px solid lightgray;
 }
+#boton_logout{
+    position:fixed;
+    right:5%;
+    top:5px;
+}
+.imagen_carta{
+    width: 300px;
+    height: 300px;
+}
 .columna_mascotas{
     width: 50%;
 }
